# nv-center-magnetometry

./: README.md  pyproject.toml
archive/legacy_code/: Callibration.py  Fit.py  Saturation spectrum.py  Sensitivity as a microwave power function.py  Sensitivity as laser power function.py  cw_exitation_various_laser_power.py  double lorentzienne.py  fit_contrast.py  lorentzienne.py  python.py
data/raw/confocal/: _folder_map.csv
data/raw/odmr/: Excel.ods  _folder_map.csv
data/raw/presentation/: data.txt
docs/: dataset_inventory.csv  report_crosswalk.md  repository_guide.md  stage_summary.md
results/confocal/: confocal_summary.csv
results/magnetic_stripe/: README.md
results/odmr/: odmr_best_conditions.csv  odmr_summary_all_channels.csv  odmr_summary_ch0.csv
scripts/: analyze_confocal_filters.py  analyze_odmr_grid.py  build_all.py  build_dataset_inventory.py  fit_single_odmr_example.py
src/nvcenter_stage/: __init__.py  confocal.py  inventory.py  io.py  models.py  odmr.py  paths.py  plotting.py  stripe.py
tests/: test_models.py
